--- a/Space Ghosts.cbp
+++ b/Space Ghosts.cbp
@@ -49,6 +49,7 @@
 		<Unit filename="BulletObject.h" />
 		<Unit filename="Character.cpp" />
 		<Unit filename="Character.h" />
+		<Unit filename="CommonFunc.cpp" />
 		<Unit filename="CommonFunc.h" />
 		<Unit filename="Enemy.cpp" />
 		<Unit filename="Enemy.h" />
